@@ -1,3 +1,6 @@
+2008-07-18 Check for nan and inf in axes.delete_masked_points().
+	   This should help hexbin and scatter deal with nans. - ADS
+
 2008-07-17 Added ability to manually select contour label locations.
 	   Also added a waitforbuttonpress function. - DMK
 
